--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     your home-brewing convenience:</p>
                 <ul class="recipes__videos">
                     <li>
-                        <iframe width="560" height="315"
+                        <iframe class="recipes__iframe"
                             src="https://www.youtube.com/embed/j6VlT_jUVPc?si=Arxpf4SQZmjgsRal"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -75,7 +75,7 @@
                         </p>
                     </li>
                     <li>
-                        <iframe width="560" height="315"
+                        <iframe class="recipes__iframe"
                             src="https://www.youtube.com/embed/st571DYYTR8?si=LjCzKcp2KoN3G2ps"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
